--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<body>
 		<button id="AppImage">
 			<a href="flappy-1.0.0-x86_64.AppImage" download="Flappy.AppImage">
-				App Image
+				Linux .AppImage
 			</a>
 		</button>
-		<button id="APK">
-			<a href="flappy-1.0.0.apk" download="flappy.apk">
-				Android APK
+		<button id="EXE">
+			<a href="flappy 1.0.0.exe" download="Flappy.exe">
+				Windows .exe
 			</a>
 		</button>
 	</body>
